<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="NumberOfGuests">Number of Guests:</string>
    <string name="Tip">Tip:</string>
    <string name="billTotal">Bill Total:</string>
    <string name="Total">Total:</string>
    <string name="individualAmount">Individual Total</string>
    <string name="individualTip">Individual Tip:</string>


    <string-array name="guests_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

</resources>
