<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:minWidth="25dp"
    android:minHeight="25dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/NumberOfGuests"
        android:id="@+id/guestsTextView"
        android:layout_marginStart="30dp"
        android:layout_marginTop="51dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/tipEditText"
        android:width="50dp"
        android:layout_alignBottom="@+id/TipTextView"
        android:layout_toEndOf="@+id/guestsTextView"
        android:layout_marginStart="42dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Tip Percentage:"
        android:id="@+id/TipTextView"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/guestsTextView"
        android:layout_alignStart="@+id/guestsTextView" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guestsSpinner"
        android:gravity="right"
        android:layout_alignBottom="@+id/guestsTextView"
        android:layout_alignStart="@+id/tipEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Tip"
        android:id="@+id/tipAmountTextView"
        android:layout_marginBottom="158dp"
        android:layout_marginEnd="42dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/TipTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/billTotal"
        android:id="@+id/billTextView"
        android:layout_below="@+id/TipTextView"
        android:layout_alignEnd="@+id/TipTextView"
        android:layout_marginTop="38dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Total"
        android:id="@+id/totalTextView"
        android:layout_marginTop="52dp"
        android:layout_alignTop="@+id/tipAmountTextView"
        android:layout_alignEnd="@+id/tipAmountTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tipTextView"
        android:layout_alignBottom="@+id/tipAmountTextView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/billTotalEditText"
        android:width="75dp"
        android:layout_alignBottom="@+id/billTextView"
        android:layout_alignStart="@+id/tipEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="$"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/billTextView"
        android:layout_toStartOf="@+id/billTotalEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/billTotalTextView"
        android:layout_alignBottom="@+id/totalTextView"
        android:layout_alignEnd="@+id/billTotalEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/individualAmount"
        android:id="@+id/indvidualTextView"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/totalTextView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/individualAmountView"
        android:layout_alignTop="@+id/indvidualTextView"
        android:layout_alignEnd="@+id/billTotalTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tipTotalTextView"
        android:layout_alignBottom="@+id/tipAmountTextView"
        android:layout_alignEnd="@+id/billTotalTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/individualTip"
        android:id="@+id/individualTip"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/indvidualTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/individualTipTextView"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/individualAmountView" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mySeekBar"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/totalTextView"
        android:max="100"
        android:indeterminate="false"
        android:layout_toStartOf="@+id/textView"
        android:layout_alignEnd="@+id/tipEditText" />

</RelativeLayout>
